[package]
name = "chic-blue"
version = "2.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zanieb/chic-blue"
documentation = "https://docs.rs/chic-blue"
description = "Pretty parser error reporting."
keywords = ["pretty", "error", "reporting", "stream"]
categories = ["parser-implementations"]
authors = ["Zanie Blue <contact@zanie.dev>", "Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
annotate-snippets = "0.9.1"

[dev-dependencies]
